# lost-things-search

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  compose.yaml  crontab.tasks  dev.compose.yaml
.github/workflows/: docker_images_ci.yaml  release.yaml  test.yaml
app/: pubspec.yaml
app/ios/Runner/: Info.plist
app/lib/: main.dart
app/lib/models/: conversation.dart  conversation_list_item.dart  institution_administrator.dart  institution_administrator_position.dart  message.dart  parent.dart  permission.dart  post.dart  role.dart  room.dart  staff.dart  staff_position.dart  student.dart  student_group.dart  student_group_student.dart  subject.dart  teacher.dart  user.dart
app/lib/screens/: login_screen.dart  public_posts.dart  public_posts_screen.dart  server_connect_screen.dart
app/lib/services/: api_service.dart  auth_service.dart  permissions.dart
app/lib/widgets/: main_navigation_bar.dart  post_card_compact.dart
app/linux/: CMakeLists.txt
app/windows/runner/: main.cpp
backend/: Dockerfile  Dockerfile.migrate  entrypoint.sh  go.mod  go.sum
backend/cmd/app/: main.go  routes.go
backend/cmd/migration/: main.go
backend/internal/config/: app.go  service_configs.go  shared.go
backend/internal/database/: db.go
backend/internal/handler/: auth_handler.go  (+15 more)
dev-docs/moderation/: moderation.d2
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.tsx
ml/: Dockerfile  pyproject.toml
ml/app/: dictionary.py  main.py
scripts/: get_updates_and_restart.sh  make_backup.sh
(+86 files in other folders)
