[project]
name = "ml"
version = "0.0.0"
description = "ML utilities"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "python-multipart>=0.0.32",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.10.2",
    "ultralytics-opencv-headless>=8.4.60",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

